progress :D now a heading box

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>Christine Lam's Personal Website</title>
+		<title>Christine Lam</title>
 		<link href="main.css" rel="stylesheet" type="text/css"/>	
 	</head>
 	
@@ -10,7 +10,7 @@
 
 		<header>
 			<nav>
-				<h1>Welcome to Christine's Website</h1>
+				<h1>Logo here eventually?</h1>
 				<ul>
 					<li><a href="">Home</a></li>
 					<li><a href="">About</a></li>
@@ -20,23 +20,21 @@
 			</nav>
 		</header>
 
-		<div class="row">
-			<div class="col">col1</div>
+		<div id = "display">
+			<h1>Christine Lam</h1>
+			<p id = "bio">
+			Software developer based in Boston, Massachusetts. Currently a student at Wellesley College.
+			</p>
+			<br>
 		</div>
 
+		<div id = "projects">
+			<div class = "row">
+				<h2>Featured Work</h2>
+
 		<footer>
-			Christine Lam © 2019
+			Made by Christine Lam
 		</footer>
-
-		<br>
-		<a href="https://www.google.com">google.com</a>
-
-		<img src = "">
-
-		<ul>
-			<li>item1</li>
-			<li>item2</li>
-		</ul>	
 
 	</body>	
 
