Scraped everything and now trying to use Bootstrap

--- a/index.html
+++ b/index.html
@@ -1,41 +1,27 @@
-<!doctype html> 
-<html>
+<!DOCTYPE html> 
+<html lang = "en">
 
 	<head>
 		<title>Christine Lam</title>
-		<link href="main.css" rel="stylesheet" type="text/css"/>	
+		<!-- Required meta tags -->
+		<meta charset="utf-8" />
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    	<!-- Bootstrap CSS -->
+    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    	<!-- Main CSS -->
+    	<link href="main.css" rel="stylesheet" type="text/css"/>
+		
 	</head>
 	
 	<body>
-
-		<header>
-			<nav>
-				<h1>Logo here eventually?</h1>
-				<ul>
-					<li><a href="">Home</a></li>
-					<li><a href="">About</a></li>
-					<li><a href="">Projects</a></li>
-					<li><a href="">Resume </a></li>
-				</ul>	
-			</nav>
-		</header>
-
-		<div id = "display">
-			<h1>Christine Lam</h1>
-			<p id = "bio">
-			Software developer based in Boston, Massachusetts. Currently a student at Wellesley College.
-			</p>
-			<br>
+		<div class="jumbotron">
+		  <div class="container">
+		    <h1 class="headline">Christine Lam</h1>
+		    <p>Software developer based in Boston, Massachusetts. Currently a student at Wellesley College.</p>
+		    <br>
+		    <p><a href="mailto:&#099;&#104;&#114;&#105;&#115;&#116;&#105;&#110;&#101;&#108;&#097;&#109;&#051;&#050;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" target="_blank" class="btn btn-primary btn-lg" href="#" role="button">&laquo; Contact Me &raquo;</a></p>
+		  </div>
 		</div>
-
-		<div id = "projects">
-			<div class = "row">
-				<h2>Featured Work</h2>
-
-		<footer>
-			Made by Christine Lam
-		</footer>
-
 	</body>	
 
 
