Nav Bar + About Me

--- a/index.html
+++ b/index.html
@@ -6,14 +6,55 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    	<!-- JQuery Files -->
+    	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     	<!-- Bootstrap CSS -->
     	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     	<!-- Main CSS -->
     	<link href="main.css" rel="stylesheet" type="text/css"/>
 		
 	</head>
-	
+
 	<body>
+		<!-- HOW TO RIGHT ALIGN WITHIN THE DROPBOX?-->
+        <!-- Navigation Bar -->
+		<nav class="navbar navbar-expand-sm navbar-custom">
+
+			<!-- Toggler/collapsibe Button -->
+			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    			<span class="navbar-toggler-icon"></span>
+			</button>
+	
+
+			<!-- Navbar Links -->
+			<div class="collapse navbar-collapse" id="collapsibleNavbar">
+				<ul class="navbar-nav ml-auto">
+				    <li class="nav-item">
+				    	<a class="nav-link" href="#">About Me</a>
+				    </li>
+				    <li class="nav-item">
+				    	<a class="nav-link" href="#">Projects</a>
+				    </li>
+				    <li class="nav-item">
+				    	<a class="nav-link" href="#">Other Work</a>
+				    </li>
+
+					<!-- Dropdown -->
+					<li class="nav-item dropdown">
+				    	<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+				        Links
+				    	</a>
+				    	<div class="dropdown-menu">
+					        <a class="dropdown-item" href="#">GitHub</a>
+					        <a class="dropdown-item" href="#">LinkedIn</a>
+					        <a class="dropdown-item" href="#">Resume</a>
+				      	</div>
+				    </li>
+				</ul>
+			</div>
+		</nav>
+
+		<!-- UNROUND THE JUMBOTRON-->
 		<div class="jumbotron">
 		  <div class="container">
 		    <h1 class="headline">Christine Lam</h1>
@@ -22,6 +63,34 @@
 		    <p><a href="mailto:&#099;&#104;&#114;&#105;&#115;&#116;&#105;&#110;&#101;&#108;&#097;&#109;&#051;&#050;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" target="_blank" class="btn btn-primary btn-lg" href="#" role="button">&laquo; Contact Me &raquo;</a></p>
 		  </div>
 		</div>
+
+		<!-- About Me-->
+		<div class="about" id="about">
+			<div class="container">
+				<h1 class="text-center">About Me</h1>
+					<div class="row">
+						<div class="col-lg-4 col-md-4 col-sm-12">
+							<img src="self.jpg" class="img-fluid">
+						</div>
+
+						<div class="col-lg-8 col-md-8 col-sm-12 desc">
+							<p>
+								Here's some random stuff about me bleh bleh. World world! Welcome to the place, where words come alive. Let's build a word, word world, word world. Jump to the beat, clap your hands in the air. Let's build a word, word world! 
+							</p>
+					</div>
+			</div>
+		</div>
+
+
+
+
+
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+		</script>
 	</body>	
 
 
