--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 			<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav ml-auto">
 				    <li class="nav-item">
-				    	<a class="nav-link" href="#">About Me</a>
+				    	<a class="nav-link" href="#about">About Me</a>
 				    </li>
 				    <li class="nav-item">
-				    	<a class="nav-link" href="#">Projects</a>
+				    	<a class="nav-link" href="#projects">Projects</a>
 				    </li>
 				    <li class="nav-item">
 				    	<a class="nav-link" href="#">Other Work</a>
@@ -70,7 +70,7 @@
 				<h1 class="text-center">About Me</h1>
 					<div class="row">
 						<div class="col-lg-4 col-md-4 col-sm-12">
-							<img src="self.jpg" class="img-fluid">
+							<img src="https://i.imgur.com/Lp9mgSb.jpg" class="img-fluid">
 						</div>
 
 						<div class="col-lg-8 col-md-8 col-sm-12 desc">
@@ -81,7 +81,10 @@
 			</div>
 		</div>
 
-
+		<!-- Projects -->
+		<div class="projects" id="projects">
+		     <h1 class="text-center">Projects</h1>
+		</div>
 
 
 
