updated about me

--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
 
 						<div class="col-lg-8 col-md-8 col-sm-12 desc">
 							<p>
-								Here's some random stuff about me bleh bleh. World world! Welcome to the place, where words come alive. Let's build a word, word world, word world. Jump to the beat, clap your hands in the air. Let's build a word, word world! 
+								I am currently a sophomore at Wellesley College majoring in Computer Science and minoring in Biology.
+								<br>
+								<br>
+								I am interested in [=D].
+								<br>
+								<br>
+								In my free time, I run Wellesley College  Robogals, a student-led organization where we host afterschool workshops for elementary-aged females in order to promote interest in the STEM field. 
 							</p>
 					</div>
 			</div>
