grrr. i can't even eek.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    	<meta name="author" content="Christine Lam">
     	<!-- JQuery Files -->
     	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     	<!-- Bootstrap CSS -->
@@ -18,7 +19,8 @@
 	<body>
 		<!-- HOW TO RIGHT ALIGN WITHIN THE DROPBOX?-->
         <!-- Navigation Bar -->
-		<nav class="navbar navbar-expand-sm navbar-custom">
+		<nav class="navbar navbar-expand-md navbar-custom" id="mainNav">
+			
 
 			<!-- Toggler/collapsibe Button -->
 			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -36,7 +38,7 @@
 				    	<a class="nav-link" href="#projects">Projects</a>
 				    </li>
 				    <li class="nav-item">
-				    	<a class="nav-link" href="#">Other Work</a>
+				    	<a class="nav-link" href="#otherwork">Other Work</a>
 				    </li>
 
 					<!-- Dropdown -->
@@ -45,8 +47,8 @@
 				        Links
 				    	</a>
 				    	<div class="dropdown-menu">
-					        <a class="dropdown-item" href="#">GitHub</a>
-					        <a class="dropdown-item" href="#">LinkedIn</a>
+					        <a class="dropdown-item" href="https://github.com/clam3">GitHub</a>
+					        <a class="dropdown-item" href="https://www.linkedin.com/in/christinelam320/">LinkedIn</a>
 					        <a class="dropdown-item" href="#">Resume</a>
 				      	</div>
 				    </li>
@@ -91,8 +93,6 @@
 		<div class="projects" id="projects">
 		     <h1 class="text-center">Projects</h1>
 		</div>
-
-
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
 		</script>
