--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
 		<meta charset="utf-8" />
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     	<meta name="author" content="Christine Lam">
+
     	<!-- JQuery Files -->
     	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
     	<!-- Bootstrap CSS -->
     	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    	 <!-- More Bootstrap Plugins-->
+		<link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
+		<link rel="stylesheet" href="plugins/aos/aos.css">
+		<link rel="stylesheet" href="plugins/owl-carousel/owl.carousel.min.css">
+		<link rel="stylesheet" href="plugins/owl-carousel/owl.theme.default.min.css">
+		<link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
+		<link rel="stylesheet" href="plugins/animated-text/animated-text.css">
+
     	<!-- Main CSS -->
     	<link href="main.css" rel="stylesheet" type="text/css"/>
 		
@@ -80,7 +91,7 @@
 								I am currently a sophomore at Wellesley College majoring in Computer Science and minoring in Biology.
 								<br>
 								<br>
-								I am interested in [=D].
+								I am interested in food [true but @placeholder]. I also enjoy video games and game development. 
 								<br>
 								<br>
 								In my free time, I run Wellesley College  Robogals, a student-led organization where we host afterschool workshops for elementary-aged females in order to promote interest in the STEM field. 
@@ -94,12 +105,151 @@
 		     <h1 class="text-center">Projects</h1>
 		</div>
 
+		<section class="portfolio ">
+			<div class="container">
+				<div class="row mb-5">
+			      	<div class="col-10">
+				        <div class="btn-group btn-group-toggle " data-toggle="buttons">
+				          <label class="btn active ">
+				            <input type="radio" name="shuffle-filter" value="all" checked="checked" />All Projects
+				          </label>
+				          <label class="btn">
+				            <input type="radio" name="shuffle-filter" value="java" />Java
+				          </label>
+				          <label class="btn">
+				            <input type="radio" name="shuffle-filter" value="python" />Python
+				          </label>
+				          <label class="btn">
+				            <input type="radio" name="shuffle-filter" value="other" />Other
+				          </label>
+				           <label class="btn">
+				            <input type="radio" name="shuffle-filter" value="hack" />Hackathons
+				          </label>
+				        </div>
+			      	</div>
+		    	</div>	
+
+				<div class="row shuffle-wrapper portfolio-gallery">
+			      <div class="col-lg-4 col-6 mb-4 shuffle-item"  data-groups="[&quot;python&quot;,&quot;hack&quot;]">
+				      	<div class="position-relative inner-box">
+				          <div class="image position-relative ">
+			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+			                <div class="overlay-box">
+			                  <div class="overlay-inner">
+			                    <a class="overlay-content" href="">
+			                      <h5 class="mb-0">Safety First</h5>
+			                      <p>WHACK 2018</p>
+			                    </a>
+			                  </div>
+			                </div> 
+			            </div>
+				      </div>
+			      </div>
+
+			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;]">
+			        <div class="position-relative inner-box" >
+			            <div class="image position-relative ">
+			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+			                <div class="overlay-box">
+			                  <div class="overlay-inner">
+				                    <a class="overlay-content" href="">
+				                      <h5 class="mb-0">Suitcase Packer</h5>
+				                      <p>Final Project</p>
+				                    </a>
+			                	</div> 
+				            </div>
+				        </div>
+				      </div>
+			      </div>
+
+			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;]">
+			        <div class="position-relative inner-box">
+			            <div class="image position-relative ">
+			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+			                <div class="overlay-box">
+			                  <div class="overlay-inner">
+			                    <a class="overlay-content" href="">
+			                      <h5 class="mb-0">Planet Universe</h5>
+			                      <p>Person</p>
+			                    </a>
+			                  </div>
+			                </div> 
+			            </div>
+			        </div>
+			      </div>
+
+			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;hack&quot;,&quot;other&quot;]">
+			        <div class="position-relative inner-box">
+			            <div class="image position-relative ">
+			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+			                <div class="overlay-box">
+			                  <div class="overlay-inner">
+			                    <a class="overlay-content" href="">
+			                      <h5 class="mb-0">Lettuce</h5>
+			                      <p>Lettuce</p>
+			                    </a>
+			                  </div>
+			                </div> 
+			            </div>
+			        </div>
+			      </div>
+
+			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;]">
+			        <div class="position-relative inner-box">
+			            <div class="image position-relative ">
+			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+			                <div class="overlay-box">
+			                  <div class="overlay-inner">
+			                    <a class="overlay-content" href="">
+			                       <h5 class="mb-0 ">Lettuce</h5>
+			                      	<p>Lettuce</p>
+			                    </a>
+			                  </div>
+			                </div> 
+			            </div>
+			        </div>
+			      </div>
+
+			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;,&quot;hack&quot;]">
+			        <div class="position-relative inner-box">
+			            <div class="image position-relative ">
+			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+			                <div class="overlay-box">
+			                  <div class="overlay-inner">
+			                    <a class="overlay-content" href="">
+			                       <h5 class="mb-0">Lettuce</h5>
+			                      	<p>Lettuce</p>
+			                    </a>
+			                  </div>
+			                </div> 
+			            </div>
+			        </div>
+			      </div>
+			    </div>
+			</div>
+		</section>
+
+		<!-- Scripts -->
+
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
 		</script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
 		</script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 		</script>
+
+		<!-- jQuery -->
+		<sript src="plugins/jQuery/jquery.min.js"></script>
+		<!-- Bootstrap JS -->
+		<script src="plugins/bootstrap/bootstrap.min.js"></script>
+		<script src="plugins/aos/aos.js"></script>
+		<script src="plugins/owl-carousel/owl.carousel.min.js"></script>
+		<script src="plugins/shuffle/shuffle.min.js"></script>
+		<script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+		<!-- Main Script -->
+		<script src="js/script.js"></script>
+
 	</body>	
 
 
