--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<div class="jumbotron">
 		  <div class="container">
 		    <h1 class="headline">Christine Lam</h1>
-		    <p>Software developer based in Boston, Massachusetts. Currently a student at Wellesley College.</p>
+		    <p>Software developer based in Boston, Massachusetts. Currently a student at Wellesley College. This website is still in development!</p>
 		    <br>
 		    <p><a href="mailto:&#099;&#104;&#114;&#105;&#115;&#116;&#105;&#110;&#101;&#108;&#097;&#109;&#051;&#050;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" target="_blank" class="btn btn-primary btn-lg" href="#" role="button">&laquo; Contact Me &raquo;</a></p>
 		  </div>
