--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
 			                <div class="overlay-box">
 			                  <div class="overlay-inner">
-			                    <a class="overlay-content" href="">
+			                    <a class="overlay-content" href="suitcasePacker.html">
 			                      <h5 class="mb-0">Planet Universe</h5>
 			                      <p>Person</p>
 			                    </a>
