--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				    	<div class="dropdown-menu">
 					        <a class="dropdown-item" href="https://github.com/clam3">GitHub</a>
 					        <a class="dropdown-item" href="https://www.linkedin.com/in/christinelam320/">LinkedIn</a>
-					        <a class="dropdown-item" href="#">Resume</a>
+					        <a class="dropdown-item" href="Resume.pdf">Resume</a>
 				      	</div>
 				    </li>
 				</ul>
