--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								I am currently a sophomore at Wellesley College majoring in Computer Science and minoring in Biology.
 								<br>
 								<br>
-								I am interested in food [true but @placeholder]. I also enjoy video games and game development. 
+								I am interested in the intersection of technology and medicine. I also enjoy video games and game development. 
 								<br>
 								<br>
 								In my free time, I run Wellesley College  Robogals, a student-led organization where we host afterschool workshops for elementary-aged females in order to promote interest in the STEM field. 
