added ATS friendly resume

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 					        <a class="dropdown-item" href="https://github.com/clam3">GitHub</a>
 					        <a class="dropdown-item" href="https://www.linkedin.com/in/christinelam320/">LinkedIn</a>
 					        <a class="dropdown-item" href="Resume.pdf">Resume</a>
+					        <a class="dropdown-item" href="ats_resume.pdf">ATS Resume</a>
 				      	</div>
 				    </li>
 				</ul>
