--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;]">
 			        <div class="position-relative inner-box" >
 			            <div class="image position-relative ">
-			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+			               <img src="img/pack.png" alt="portfolio-image" class="img-fluid w-100 d-block">
 			                <div class="overlay-box">
 			                  <div class="overlay-inner">
-				                    <a class="overlay-content" href="">
+				                    <a class="overlay-content" href="suitcasePacker.html">
 				                      <h5 class="mb-0">Suitcase Packer</h5>
 				                      <p>Final Project</p>
 				                    </a>
