--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
 				    <li class="nav-item">
 				    	<a class="nav-link" href="#projects">Projects</a>
 				    </li>
-				    <li class="nav-item">
-				    	<a class="nav-link" href="#otherwork">Other Work</a>
-				    </li>
 
 					<!-- Dropdown -->
 					<li class="nav-item dropdown">
@@ -150,7 +147,7 @@
 			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;]">
 			        <div class="position-relative inner-box" >
 			            <div class="image position-relative ">
-			               <img src="img/pack.png" alt="portfolio-image" class="img-fluid w-100 d-block">
+			               <img src="img/pack.PNG" alt="portfolio-image" class="img-fluid w-100 d-block">
 			                <div class="overlay-box">
 			                  <div class="overlay-inner">
 				                    <a class="overlay-content" href="suitcasePacker.html">
