--- a/suitcasePacker.html
+++ b/suitcasePacker.html
@@ -45,9 +45,6 @@
 				    <li class="nav-item">
 				    	<a class="nav-link" href="#projects">Projects</a>
 				    </li>
-				    <li class="nav-item">
-				    	<a class="nav-link" href="#otherwork">Other Work</a>
-				    </li>
 
 					<!-- Dropdown -->
 					<li class="nav-item dropdown">
@@ -82,7 +79,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6">
-				<img src="img/pack.png" alt="" class="img-fluid w-100">
+				<img src="img/pack.PNG" alt="" class="img-fluid w-100">
 			</div>
 
 			<div class="col-lg-6">
