fixed header and type desc for suitcase

--- a/planet.html
+++ b/planet.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 
 <head> 
-	<title>Suitcase Packer</title>
+	<title>Planet</title>
 
 	<!-- mobile responsive meta -->
   	<meta name="viewport" content="width=device-width, initial-scale=1">
