--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
 			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;]">
 			        <div class="position-relative inner-box">
 			            <div class="image position-relative ">
-			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+			               <img src="img/planet.PNG" alt="portfolio-image" class="img-fluid w-100 d-block">
 			                <div class="overlay-box">
 			                  <div class="overlay-inner">
-			                    <a class="overlay-content" href="suitcasePacker.html">
+			                    <a class="overlay-content" href="planet.html">
 			                      <h5 class="mb-0">Planet Universe</h5>
-			                      <p>Person</p>
+			                      <p>Personal</p>
 			                    </a>
 			                  </div>
 			                </div> 
@@ -176,15 +176,15 @@
 			        </div>
 			      </div>
 
-			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;hack&quot;,&quot;other&quot;]">
+			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;other&quot;]">
 			        <div class="position-relative inner-box">
 			            <div class="image position-relative ">
 			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
 			                <div class="overlay-box">
 			                  <div class="overlay-inner">
 			                    <a class="overlay-content" href="">
-			                      <h5 class="mb-0">Lettuce</h5>
-			                      <p>Lettuce</p>
+			                      <h5 class="mb-0">Colonialism in Minecraft</h5>
+			                      <p>Research</p>
 			                    </a>
 			                  </div>
 			                </div> 
