--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;other&quot;]">
 			        <div class="position-relative inner-box">
 			            <div class="image position-relative ">
-			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
+			               <img src="img/minecraft.png" alt="portfolio-image" class="img-fluid w-100 d-block">
 			                <div class="overlay-box">
 			                  <div class="overlay-inner">
-			                    <a class="overlay-content" href="">
+			                    <a class="overlay-content" href="minecraft.html">
 			                      <h5 class="mb-0">Colonialism in Minecraft</h5>
 			                      <p>Research</p>
 			                    </a>
