--- a/minecraft.html
+++ b/minecraft.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 
 <head> 
-	<title>Planet</title>
+	<title>Minecraft</title>
 
 	<!-- mobile responsive meta -->
   	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -70,7 +70,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="text-center">
-          <h1 class="text-capitalize mb-0 text-lg">Planet Universe!</h1>
+          <h1 class="text-capitalize mb-0 text-lg">Colonialism in Minecraft</h1>
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6">
-				<img src="img/planet.PNG" alt="" class="img-fluid w-100">
+				<img src="img/minecraft.png" alt="" class="img-fluid w-100">
 			</div>
 
 			<div class="col-lg-6">
@@ -94,13 +94,8 @@
 					<div class="row mt-4">
 						<div class="col-lg-6">
 							<div class="info">
-								<h5 class="mb-0">Languages & Skills</h5>
-								<p>Java, Procedural Generation, Perlin Noise</p>
-							</div>
-
-							<div class="info">
 								<h5 class="mb-0">Link</h5>
-								<p><a href="https://github.com/clam3/planet-universer">click here</a></p>
+								<p>[Add link to paper here]</p>
 							</div>
 
 							<div class="info">
