added a new label: research

--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
 				            <input type="radio" name="shuffle-filter" value="python" />Python
 				          </label>
 				          <label class="btn">
-				            <input type="radio" name="shuffle-filter" value="other" />Other
+				            <input type="radio" name="shuffle-filter" value="other" />Other Language
+				          </label>
+				          <label class="btn">
+				            <input type="radio" name="shuffle-filter" value="research" />Research
 				          </label>
 				           <label class="btn">
 				            <input type="radio" name="shuffle-filter" value="hack" />Hackathons
@@ -176,7 +179,7 @@
 			        </div>
 			      </div>
 
-			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;other&quot;]">
+			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;research&quot;]">
 			        <div class="position-relative inner-box">
 			            <div class="image position-relative ">
 			               <img src="img/minecraft.png" alt="portfolio-image" class="img-fluid w-100 d-block">
