updated the minecraft page

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 								I am currently a sophomore at Wellesley College majoring in Computer Science and minoring in Biology.
 								<br>
 								<br>
-								I am interested in the intersection of technology and medicine. I also enjoy video games and game development. 
+								I am interested in the intersection of technology and medicine. I strive to code for the social good. I also enjoy video games and game development. 
 								<br>
 								<br>
-								In my free time, I run Wellesley College  Robogals, a student-led organization where we host afterschool workshops for elementary-aged females in order to promote interest in the STEM field. 
+								In my free time, I run Wellesley College Robogals, a student-led organization that hosts afterschool workshops for elementary-aged females in order to promote interest in the STEM field. 
 							</p>
 					</div>
 			</div>
