--- a/minecraft.html
+++ b/minecraft.html
@@ -89,13 +89,13 @@
 				<div class="project-info">
 					<p>Currently a work in progress.</p>
 
-					<p>blehbleh</p>
+					<p>This poster was created during the Wellesley College 2019 Science Center Summer Research Program under the advisement of Professor Peter Mawhorter of the Computer Science Department.</p>
 
 					<div class="row mt-4">
 						<div class="col-lg-6">
 							<div class="info">
 								<h5 class="mb-0">Link</h5>
-								<p>[Add link to paper here]</p>
+								<p>[Paper associated with this poster is currently under progress.]</p>
 							</div>
 
 							<div class="info">
