updated planet.html with links

--- a/minecraft.html
+++ b/minecraft.html
@@ -87,14 +87,14 @@
 
 			<div class="col-lg-6">
 				<div class="project-info">
-					<p>Currently a work in progress.</p>
+					<p>An examanation of how colonialism manifests in Minecraft. Five ways in which Minecraft's mechanics uphold colonialist mentalites include: hostile monsters, villager NPC, inventory and acquistion, terrian generation and exploration, and the achievement system.</p>
 
 					<p>This poster was created during the Wellesley College 2019 Science Center Summer Research Program under the advisement of Professor Peter Mawhorter of the Computer Science Department.</p>
 
 					<div class="row mt-4">
 						<div class="col-lg-6">
 							<div class="info">
-								<h5 class="mb-0">Link</h5>
+								<h5 class="mb-0">Links</h5>
 								<p>[Paper associated with this poster is currently under progress.]</p>
 							</div>
 
