--- a/planet.html
+++ b/planet.html
@@ -87,7 +87,7 @@
 
 			<div class="col-lg-6">
 				<div class="project-info">
-					<p>Currently a work in progress.</p>
+					<p>Hm...</p>
 
 					<p>blehbleh</p>
 
@@ -99,8 +99,11 @@
 							</div>
 
 							<div class="info">
-								<h5 class="mb-0">Link</h5>
-								<p><a href="https://github.com/clam3/planet-universer">click here</a></p>
+								<h5 class="mb-0">Links</h5>
+								<p><a href="https://github.com/clam3/planet-universe">Github Link</a></p>
+								<p><a href="pdfs/lam_mawhorter.pdf">Poster</a></p>
+								<p><a href="pdfs/LamChristine2019_Public.pdf">Public Abstract</a></p>
+								<p><a href="pdfs/LamChristine2019_Technical.pdf">Technical Abstract</a></p>
 							</div>
 
 							<div class="info">
