--- a/suitcasePacker.html
+++ b/suitcasePacker.html
@@ -57,8 +57,8 @@
 				    	<div class="dropdown-menu">
 					        <a class="dropdown-item" href="https://github.com/clam3">GitHub</a>
 					        <a class="dropdown-item" href="https://www.linkedin.com/in/christinelam320/">LinkedIn</a>
-					        <a class="dropdown-item" href="Resume.pdf">Resume</a>
-					        <a class="dropdown-item" href="ats_resume.pdf">ATS Resume</a>
+					        <a class="dropdown-item" href="pdfs/Resume.pdf">Resume</a>
+					        <a class="dropdown-item" href="pdfs/ats_resume.pdf">ATS Resume</a>
 				      	</div>
 				    </li>
 				</ul>
