added desc to planet.html

--- a/planet.html
+++ b/planet.html
@@ -86,9 +86,11 @@
 
 			<div class="col-lg-6">
 				<div class="project-info">
-					<p>Hm...</p>
+					<p>Planet Universe! is a space themed Java game that uses procedural generation—the generation of data pseudo-randomly using computer algorithms. All the current and future components such as the stars and nebulas are rendered in the same fashion: a class that manages a variety of abstract world tiles that come together to create a layer of the world.</p>
 
-					<p>blehbleh</p>
+					<p>The game is currently being worked on. The end goal is a game that procedurally generates a space themed environment that includes stars, nebulas, and planets. The user would be able to move a spaceship in order to collect an
+					infinite number of unique planets. My next step would be to finish the generation of the nebula and create the planets, whose generation will be more straightforward as it will utilize
+					a lot of the already made code for star and nebula generation.</p>
 
 					<div class="row mt-4">
 						<div class="col-lg-6">
