--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 				    	<div class="dropdown-menu">
 					        <a class="dropdown-item" href="https://github.com/clam3">GitHub</a>
 					        <a class="dropdown-item" href="https://www.linkedin.com/in/christinelam320/">LinkedIn</a>
+					        <a class="dropdown-item" href="https://devpost.com/christinelam320">Devpost</a>
 					        <a class="dropdown-item" href="pdfs/Resume.pdf">Resume</a>
 				      	</div>
 				    </li>
