--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			               <img src="img/safetyFirst.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
 			                <div class="overlay-box">
 			                  <div class="overlay-inner">
-			                    <a class="overlay-content" href="">
+			                    <a class="overlay-content" href="safetyFirst.html">
 			                      <h5 class="mb-0">Safety First</h5>
 			                      <p>WHACK 2018</p>
 			                    </a>
