--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 			                <div class="overlay-box">
 			                  <div class="overlay-inner">
 			                    <a class="overlay-content" href="">
-			                       <h5 class="mb-0 ">Lettuce</h5>
-			                      	<p>Lettuce</p>
+			                       <h5 class="mb-0 ">Pill Safety</h5>
+			                      	<p>HackMIT 2019</p>
 			                    </a>
 			                  </div>
 			                </div> 
