--- a/index.html
+++ b/index.html
@@ -1,262 +1,32 @@
-<!DOCTYPE html> 
-<html lang = "en">
-
+<!DOCTYPE html>
+<html>
 	<head>
-		<title>Christine Lam</title>
-		<!-- Required meta tags -->
-		<meta charset="utf-8" />
-    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    	<meta name="author" content="Christine Lam">
-
-    	<!-- JQuery Files -->
-    	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
-    	<!-- Bootstrap CSS -->
-    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    	 <!-- More Bootstrap Plugins-->
-		<link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
-		<link rel="stylesheet" href="plugins/aos/aos.css">
-		<link rel="stylesheet" href="plugins/owl-carousel/owl.carousel.min.css">
-		<link rel="stylesheet" href="plugins/owl-carousel/owl.theme.default.min.css">
-		<link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
-		<link rel="stylesheet" href="plugins/animated-text/animated-text.css">
-
-    	<!-- Main CSS -->
-    	<link href="main.css" rel="stylesheet" type="text/css"/>
-		
+    	<meta charset="utf-8">
+    	<script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
+    	<link rel="stylesheet" href="style.css">
+    	<title>Christine Lam</title>
 	</head>
-
 	<body>
-		<!-- HOW TO RIGHT ALIGN WITHIN THE DROPBOX?-->
-        <!-- Navigation Bar -->
-		<nav class="navbar navbar-expand-md navbar-custom" id="mainNav">
-			
+		<div class="box">
+			<img src="Christine.jpg" alt="" class="box-img">
+			<h1>Christine Lam</h1>
+			<h5>Software Developer</h5>
+				<p> Hi! I’m Christine, a fast-growing software developer with a passion for social good and games. I’m eager to bridge the gap between humans and technology by designing applications that bring the world together.</p>
 
-			<!-- Toggler/collapsibe Button -->
-			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    			<span class="navbar-toggler-icon"></span>
-			</button>
-	
+				<p>I'm from Baltimore, Maryland. I am currently pursuing my undergraduate degree computer science degree at Wellesley College, set to graduate Spring 2022.</p>
 
-			<!-- Navbar Links -->
-			<div class="collapse navbar-collapse" id="collapsibleNavbar">
-				<ul class="navbar-nav ml-auto">
-				    <li class="nav-item">
-				    	<a class="nav-link" href="#about">About Me</a>
-				    </li>
-				    <li class="nav-item">
-				    	<a class="nav-link" href="#projects">Projects</a>
-				    </li>
+		        <p> I'm passionate about inclusivity and food. I'm president of Robogals, an organization that engages and empowers elementary-aged girls to study engineering and computer science.</p>
 
-					<!-- Dropdown -->
-					<li class="nav-item dropdown">
-				    	<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-				        Links
-				    	</a>
-				    	<div class="dropdown-menu">
-					        <a class="dropdown-item" href="https://github.com/clam3">GitHub</a>
-					        <a class="dropdown-item" href="https://www.linkedin.com/in/christinelam320/">LinkedIn</a>
-					        <a class="dropdown-item" href="https://devpost.com/christinelam320">Devpost</a>
-					        <a class="dropdown-item" href="pdfs/Resume.pdf">Resume</a>
-				      	</div>
-				    </li>
-				</ul>
-			</div>
-		</nav>
+		        <p> In my free time, I do performance martial arts (wushu) and play a variety of games. Betrayal At House on the Hill is my favorite board game.</p>
 
-		<!-- UNROUND THE JUMBOTRON-->
-		<div class="jumbotron">
-		  <div class="container">
-		    <h1 class="headline">Christine Lam</h1>
-		    <p>Software developer based in Boston, Massachusetts. Currently a student at Wellesley College. This website is still in development!</p>
-		    <br>
-		    <p><a href="mailto:&#099;&#104;&#114;&#105;&#115;&#116;&#105;&#110;&#101;&#108;&#097;&#109;&#051;&#050;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" target="_blank" class="btn btn-primary btn-lg" href="#" role="button">&laquo; Contact Me &raquo;</a></p>
-		  </div>
+		        <p> I'm currently looking for Summer 2021 internship opportunities! <a href="https://docs.google.com/document/d/1Qr5f1Z0jE1N_-nf6jyzbQHvl6KCjTdsHxOyOqqtluyA/preview" target="_blank">Check out my Resume</a> </p>
+
+		<ul>
+			<li><a href="https://github.com/clam3"><i class="fa fa-github-square"></i></a></li>
+			<li><a href="mailto:christinelam320@gmail.com"><i class="fa fa-envelope-square"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/christinelam320/"><i class="fa fa-linkedin-square"></i></a></li>
+		</ul>
 		</div>
-
-		<!-- About Me-->
-		<div class="about" id="about">
-			<div class="container">
-				<h1 class="text-center">About Me</h1>
-					<div class="row">
-						<div class="col-lg-4 col-md-4 col-sm-12">
-							<img src="https://i.imgur.com/Lp9mgSb.jpg" class="img-fluid">
-						</div>
-
-						<div class="col-lg-8 col-md-8 col-sm-12 desc">
-							<p>
-								I am currently a sophomore at Wellesley College majoring in Computer Science and minoring in Biology.
-								<br>
-								<br>
-								I am interested in the intersection of technology and medicine. I strive to code for the social good. I also enjoy video games and game development. 
-								<br>
-								<br>
-								In my free time, I run Wellesley College Robogals, a student-led organization that hosts afterschool workshops for elementary-aged females in order to promote interest in the STEM field. 
-							</p>
-					</div>
-			</div>
-		</div>
-
-		<!-- Projects -->
-		<div class="projects" id="projects">
-		     <h1 class="text-center">Projects</h1>
-		</div>
-
-		<section class="portfolio ">
-			<div class="container">
-				<div class="row mb-5">
-			      	<div class="col-10">
-				        <div class="btn-group btn-group-toggle " data-toggle="buttons">
-				          <label class="btn active ">
-				            <input type="radio" name="shuffle-filter" value="all" checked="checked" />All Projects
-				          </label>
-				          <label class="btn">
-				            <input type="radio" name="shuffle-filter" value="java" />Java
-				          </label>
-				          <label class="btn">
-				            <input type="radio" name="shuffle-filter" value="python" />Python
-				          </label>
-				          <label class="btn">
-				            <input type="radio" name="shuffle-filter" value="other" />Other Language
-				          </label>
-				          <label class="btn">
-				            <input type="radio" name="shuffle-filter" value="research" />Research
-				          </label>
-				           <label class="btn">
-				            <input type="radio" name="shuffle-filter" value="hack" />Hackathons
-				          </label>
-				        </div>
-			      	</div>
-		    	</div>	
-
-				<div class="row shuffle-wrapper portfolio-gallery">
-			      <div class="col-lg-4 col-6 mb-4 shuffle-item"  data-groups="[&quot;python&quot;,&quot;hack&quot;]">
-				      	<div class="position-relative inner-box">
-				          <div class="image position-relative ">
-			               <img src="img/safetyFirst.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-			                <div class="overlay-box">
-			                  <div class="overlay-inner">
-			                    <a class="overlay-content" href="safetyFirst.html">
-			                      <h5 class="mb-0">Safety First</h5>
-			                      <p>WHACK 2018</p>
-			                    </a>
-			                  </div>
-			                </div> 
-			            </div>
-				      </div>
-			      </div>
-
-			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;]">
-			        <div class="position-relative inner-box" >
-			            <div class="image position-relative ">
-			               <img src="img/pack.PNG" alt="portfolio-image" class="img-fluid w-100 d-block">
-			                <div class="overlay-box">
-			                  <div class="overlay-inner">
-				                    <a class="overlay-content" href="suitcasePacker.html">
-				                      <h5 class="mb-0">Suitcase Packer</h5>
-				                      <p>Final Project</p>
-				                    </a>
-			                	</div> 
-				            </div>
-				        </div>
-				      </div>
-			      </div>
-
-			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;]">
-			        <div class="position-relative inner-box">
-			            <div class="image position-relative ">
-			               <img src="img/planet.PNG" alt="portfolio-image" class="img-fluid w-100 d-block">
-			                <div class="overlay-box">
-			                  <div class="overlay-inner">
-			                    <a class="overlay-content" href="planet.html">
-			                      <h5 class="mb-0">Planet Universe</h5>
-			                      <p>Personal</p>
-			                    </a>
-			                  </div>
-			                </div> 
-			            </div>
-			        </div>
-			      </div>
-
-			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;research&quot;]">
-			        <div class="position-relative inner-box">
-			            <div class="image position-relative ">
-			               <img src="img/minecraft.png" alt="portfolio-image" class="img-fluid w-100 d-block">
-			                <div class="overlay-box">
-			                  <div class="overlay-inner">
-			                    <a class="overlay-content" href="minecraft.html">
-			                      <h5 class="mb-0">Colonialism in Minecraft</h5>
-			                      <p>Research</p>
-			                    </a>
-			                  </div>
-			                </div> 
-			            </div>
-			        </div>
-			      </div>
-
-			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;]">
-			        <div class="position-relative inner-box">
-			            <div class="image position-relative ">
-			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-			                <div class="overlay-box">
-			                  <div class="overlay-inner">
-			                    <a class="overlay-content" href="">
-			                       <h5 class="mb-0 ">Pill Safety</h5>
-			                      	<p>HackMIT 2019</p>
-			                    </a>
-			                  </div>
-			                </div> 
-			            </div>
-			        </div>
-			      </div>
-
-			      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[&quot;java&quot;,&quot;hack&quot;]">
-			        <div class="position-relative inner-box">
-			            <div class="image position-relative ">
-			               <img src="img/temp.jpg" alt="portfolio-image" class="img-fluid w-100 d-block">
-			                <div class="overlay-box">
-			                  <div class="overlay-inner">
-			                    <a class="overlay-content" href="">
-			                       <h5 class="mb-0">Lettuce</h5>
-			                      	<p>Lettuce</p>
-			                    </a>
-			                  </div>
-			                </div> 
-			            </div>
-			        </div>
-			      </div>
-			    </div>
-			</div>
-		</section>
-
-		<!-- Scripts -->
-
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-		</script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-		</script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-		</script>
-
-		<!-- jQuery -->
-		<sript src="plugins/jQuery/jquery.min.js"></script>
-		<!-- Bootstrap JS -->
-		<script src="plugins/bootstrap/bootstrap.min.js"></script>
-		<script src="plugins/aos/aos.js"></script>
-		<script src="plugins/owl-carousel/owl.carousel.min.js"></script>
-		<script src="plugins/shuffle/shuffle.min.js"></script>
-		<script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-		<!-- Main Script -->
-		<script src="js/script.js"></script>
-
-	</body>	
-
-
-<!-- also ol, div, span, p, h -->
-<!-- usually p is better than br -->
-<!-- h1 is biggest down to h6 -->
-
-
+	</body>
 </html>
+
