--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="box">
-			<img src="Christine.jpg" alt="" class="box-img">
+			<img src="Christine.JPG" alt="" class="box-img">
 			<h1>Christine Lam</h1>
 			<h5>Software Developer</h5>
 				<p> Hi! I’m Christine, a fast-growing software developer with a passion for social good and games. I’m eager to bridge the gap between humans and technology by designing applications that bring the world together.</p>
