--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<ul>
 			<li><a href="https://github.com/clam3"><i class="fa fa-github-square"></i></a></li>
-			<li><a href="mailto:christinelam320@gmail.com"><i class="fa fa-envelope-square"></i></a></li>
+			<li><a href="mailto: &#099;&#104;&#114;&#105;&#115;&#116;&#105;&#110;&#101;&#108;&#097;&#109;&#051;&#050;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"><i class="fa fa-envelope-square"></i></a></li>
 			<li><a href="https://www.linkedin.com/in/christinelam320/"><i class="fa fa-linkedin-square"></i></a></li>
 		</ul>
 		</div>
