--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		        <p> I'm currently looking for Summer 2021 internship opportunities! <a href="https://docs.google.com/document/d/1Qr5f1Z0jE1N_-nf6jyzbQHvl6KCjTdsHxOyOqqtluyA/preview" target="_blank">Check out my Resume</a> </p>
 
 		<ul>
-			<li><a href="https://github.com/clam3"><i class="fa fa-github-square"></i></a></li>
+			<li><a href="https://github.com/clam3" target="_blank>"><i class="fa fa-github-square"></i></a></li>
 			<li><a href="mailto: &#099;&#104;&#114;&#105;&#115;&#116;&#105;&#110;&#101;&#108;&#097;&#109;&#051;&#050;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"><i class="fa fa-envelope-square"></i></a></li>
-			<li><a href="https://www.linkedin.com/in/christinelam320/"><i class="fa fa-linkedin-square"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/christinelam320/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
 		</ul>
 		</div>
 	</body>
