--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 			<img src="christine.jpg" alt="(image not showing)" class="box-img">
 			<h1>Christine Lam</h1>
 			<h5>Software Developer</h5>
-				<p> Hi! I’m Christine, a fast-growing software developer with a passion for social good and games. I’m eager to bridge the gap between humans and technology by designing applications that bring the world together.</p>
+				<p> Hi! I’m Christine, a fast-growing software developer with a passion for social good and games. I’m eager to bridge the gap between humans and technology by designing <a href="projects.html" target="_blank">applications</a> that bring the world together.</p>
 
-				<p>I'm from Baltimore, Maryland. I am currently pursuing my undergraduate degree computer science degree at Wellesley College, set to graduate Spring 2022.</p>
+				<p>I'm from Baltimore, Maryland (Go Orioles!). I am currently pursuing my undergraduate degree in computer science at Wellesley College, set to graduate Spring 2022.</p>
 
 		        <p> I'm passionate about inclusivity and food. I'm president of Robogals, an organization that engages and empowers elementary-aged girls to study engineering and computer science.</p>
 
-		        <p> In my free time, I do performance martial arts (wushu) and play a variety of games. Betrayal At House on the Hill is my favorite board game.</p>
+		        <p> In my free time, I do performance martial arts (wushu) and play a variety of <a href="https://www.twitch.tv/kristyscorner" target="_blank">games</a>. Betrayal At House on the Hill is my favorite board game.</p>
 
 		        <p> I'm currently looking for Summer 2021 internship opportunities! <a href="https://docs.google.com/document/d/1Qr5f1Z0jE1N_-nf6jyzbQHvl6KCjTdsHxOyOqqtluyA/preview" target="_blank">Check out my Resume</a> </p>
 
