--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<img src="christine.jpg" alt="(image not showing)" class="box-img">
 			<h1>Christine Lam</h1>
 			<h5>Software Developer</h5>
-				<p> Hi! I’m Christine, a fast-growing software developer with a passion for social good and games. I’m eager to bridge the gap between humans and technology by designing <a href="projects.html" target="_blank">applications</a> that bring the world together.</p>
+				<p> Hi! I’m Christine, a fast-growing software developer with a passion for social good and games. I’m eager to bridge the gap between humans and technology by designing applications</a> that bring the world together.</p>
 
 				<p>I'm from Baltimore, Maryland (Go Orioles!). I am currently pursuing my undergraduate degree in computer science at Wellesley College, set to graduate Spring 2022.</p>
 
