image/header format

--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
 	</head>
 	<body>
 		<div class="box">
-			<img src="christine.jpg" alt="(image not showing)" class="box-img">
-			<h1>Christine Lam</h1>
-			<h5>Software Developer</h5>
+			<table cellspacing="10">
+				<tr>
+					<td> 
+						<img src="christine.jpg" alt="(image not showing)" class="box-img"> 
+					</td>
+					<td> 
+						<h1>Christine Lam</h1>
+						<h5>Software Developer</h5> 
+					</td>
+				</tr>
+			</table>
+			
+			
 				<p> Hi! I’m Christine, a fast-growing software developer with a passion for social good and games. I’m eager to bridge the gap between humans and technology by designing applications</a> that bring the world together.</p>
 
 				<p>I'm from Baltimore, Maryland (Go Orioles!). I am currently pursuing my undergraduate degree in computer science at Wellesley College, set to graduate Spring 2022.</p>
@@ -21,11 +31,11 @@
 
 		        <p> I'm currently looking for Summer 2021 internship opportunities! <a href="https://docs.google.com/document/d/1Qr5f1Z0jE1N_-nf6jyzbQHvl6KCjTdsHxOyOqqtluyA/preview" target="_blank">Check out my Resume</a> </p>
 
-		<ul>
-			<li><a href="https://github.com/clam3" target="_blank>"><i class="fa fa-github-square"></i></a></li>
-			<li><a href="mailto: &#099;&#104;&#114;&#105;&#115;&#116;&#105;&#110;&#101;&#108;&#097;&#109;&#051;&#050;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"><i class="fa fa-envelope-square"></i></a></li>
-			<li><a href="https://www.linkedin.com/in/christinelam320/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
-		</ul>
+			<ul>
+				<li><a href="https://github.com/clam3" target="_blank>"><i class="fa fa-github-square"></i></a></li>
+				<li><a href="mailto: &#099;&#104;&#114;&#105;&#115;&#116;&#105;&#110;&#101;&#108;&#097;&#109;&#051;&#050;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"><i class="fa fa-envelope-square"></i></a></li>
+				<li><a href="https://www.linkedin.com/in/christinelam320/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+			</ul>
 		</div>
 	</body>
 </html>
