--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<meta charset="utf-8">
     	<script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     	<link rel="stylesheet" href="style.css">
+    	<link rel="icon" href="favicon.ico">
     	<title>Christine Lam</title>
 	</head>
 	<body>
